# anyway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  PROGRESS.md  README.md  debug_gps.py  deploy.sh  docker-compose.yml  log.sh  main.py  pyproject.toml  restart.sh
app/: config.py  main.py  storage.py
app/admin/: router.py
app/ai/: analyzer.py  tagger.py
app/auth/: deps.py
app/photos/: models.py  router.py  service.py
app/templates/: base.html  index.html
app/templates/admin/: dashboard.html  edit.html  login.html  photos.html  upload.html
app/templates/photos/: _grid.html  detail.html  index.html  map.html
app/templates/tools/: calc.html  index.html
app/tools/: router.py
migrations/: env.py
migrations/versions/: 936ae0bfe554_init.py  96ba7619e2a1_add_focal_length_to_photos.py
nginx/: anyway.conf  nginx.conf
scripts/: geocode_locations.py  migrate_to_r2.py  start.sh
tests/: conftest.py  test_admin_router.py  test_analyzer.py  test_auth.py  test_service.py  test_tagger.py
